USCLA-68: Reduced sizing of carousel title and buttons on mobile to help prevent overlapping.

--- a/src/patterns/components/carousel/carousel.scss
+++ b/src/patterns/components/carousel/carousel.scss
@@ -25,6 +25,10 @@
 
 .carousel-item__title {
   @include wire-large-heading;
+
+  @include breakpoint($bp-under-xsm) {
+    font-size: 1.25rem;
+  }
 }
 
 // Overriding Slick styles for style guide
@@ -46,6 +50,10 @@
 
     &::before {
       font-size: 48px;
+
+      @include breakpoint($bp-under-xsm) {
+        font-size: 38px;
+      }
     }
   }
 
